--- a/KaloriWebApplication/Views/Shared/_ValidationScriptsPartial.cshtml
+++ b/KaloriWebApplication/Views/Shared/_ValidationScriptsPartial.cshtml
@@ -2,7 +2,10 @@
 <script src="~/lib/jquery-validation-unobtrusive/jquery.validate.unobtrusive.min.js"></script>
 
 @section Scripts {
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validate/1.19.2/jquery.validate.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-validation-unobtrusive/3.2.11/jquery.validate.unobtrusive.min.js"></script>
     @{
         await Html.RenderPartialAsync("_ValidationScriptsPartial");
+
     }
 }
