Translated comments to English

--- a/KaloriWebApplication/Views/Shared/_Layout.cshtml
+++ b/KaloriWebApplication/Views/Shared/_Layout.cshtml
@@ -13,21 +13,21 @@
 
     <style>
         .navbar-brand {
-            color: #FFFFFF; /* Beyaz metin */
+            color: #FFFFFF; /* White text */
             font-weight: bold;
         }
 
         .navbar-nav .nav-link {
-            color: #FFFFFF; /* Beyaz metin */
+            color: #FFFFFF; /* White text */
         }
 
             .navbar-nav .nav-link:hover {
-                color: #FFFFFF; /* Beyaz metin */
+                color: #FFFFFF; /* White text */
                 background-color: #AF8F6F; 
             }
 
         .navbar-toggler-icon {
-            background-color: #FFFFFF; /* Beyaz menü simgesi */
+            background-color: #FFFFFF; /* White menu icon */
         }
 
 
