--- a/KaloriWebApplication/wwwroot/css/site.css
+++ b/KaloriWebApplication/wwwroot/css/site.css
@@ -20,7 +20,7 @@
         }
 
 .navbar {
-    background-color: white; /* Navbar arka plan rengi beyaz olarak ayarlandý */
+    background-color: white; /* Navbar background color is set to white */
 }
 
 .menu-icon {
