--- a/KaloriWebApplication/Views/Account/CompleteProfile.cshtml
+++ b/KaloriWebApplication/Views/Account/CompleteProfile.cshtml
@@ -87,12 +87,12 @@
 
 <style>
     .card-header {
-        background-color: #388E3C; /* Hafifçe koyu yeşil */
-        color: #FFFFFF; /* Beyaz metin */
+        background-color: #388E3C; /* Slightly dark green */
+        color: #FFFFFF; /* White text */
     }
 
     .text-green {
-        color: #388E3C !important; /* Hafifçe koyu yeşil */
+        color: #388E3C !important; /* Slightly dark green */
     }
 
     .btn-green {
@@ -106,6 +106,6 @@
         }
 
     .text-danger {
-        color: #D32F2F !important; /* Kırmızı */
+        color: #D32F2F !important; /* Red */
     }
 </style>
