--- a/KaloriWebApplication/Views/Account/Dashboard.cshtml
+++ b/KaloriWebApplication/Views/Account/Dashboard.cshtml
@@ -77,7 +77,7 @@
                 </tr>
             </thead>
             <tbody id="nutrientsBody">
-                <!-- Besin kayıtları buraya eklenecek -->
+                <!-- Nutrient records will be added here -->
             </tbody>
             <tfoot>
                 <tr>
@@ -111,8 +111,8 @@
                         label: 'Günlük Kaloriler',
                         data: [totalCalories, dailyCalories - totalCalories],
                         backgroundColor: [
-                            'rgba(255, 99, 132, 0.5)', // Tüketilen Kaloriler
-                            'rgba(54, 162, 235, 0.5)'  // Kalan Kaloriler
+                            'rgba(255, 99, 132, 0.5)', // Consumed calories
+                            'rgba(54, 162, 235, 0.5)'  // Remaining calories
                         ],
                         borderColor: [
                             'rgba(255, 99, 132, 1)',
